# OmniAdminFinder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  admin_finder.py  pyproject.toml  requirements.txt  test_scan.csv  test_scan.json  test_scan.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
attached_assets/: Pasted-Here-is-the-exact-content-of-the-README-md-file-as-a-pr_1782568706244.txt  Pasted-I-want-you-to-prepare-this-project-as-if-it-were-a-top-_1782568850514.txt  Pasted-Looks-like-the-GitHub-Copilot-agent-workflow-failed-mid_1782569292073.txt  README_1782568699093.md  deepseek_python_20260627_f02ac8_1782570631607.py
omnifinder/: __init__.py  analyzer.py  cli.py  fingerprint.py  reporter.py  scanner.py  utils.py
tests/: test_scanner.py
